src/css/Marketplace/sidebar.css
.sidebar-title {
  font-family: 'ProximaNova-Bold';
  font-size: 16px;
}

.sidebar-options {
  font-family: 'ProximaNova-Regular';
  font-size: 16px;
  display: flex;
  flex-direction: column;
}

[aria-expanded='true'] {
  border-color: #8cbaff !important;
}

[aria-checked='true'] {
  font-family: 'ProximaNova-Bold';
  order: -1;
}

.sidebar-options > div:has([aria-checked='true']) {
  order: -1;
}

[aria-disabled="true"] {
  opacity: 1 !important;
}

[aria-disabled="true"] .q-item__label {
  opacity: 0.6 !important;
}

.sidebar-active-border {
  border: 1px solid #8cbaff;
  border-radius: 6px !important;
}

.sidebar-label-light {
  font-family: 'Obviously-Bold';
  font-size: 16px;
  color: #9d9d9d;
}

.sidebar-label-bold {
  font-family: 'ProximaNova-Bold';
  font-size: 16px;
  color: #212131;
}

.sidebar-search .q-field__control {
  border-radius: 6px !important;
}

.sidebar-search .q-icon {
  color: rgba(157, 157, 157, 1);
}

.sidebar-search-stretch {
  flex-grow: 1;
}

.sidebar-search .q-field__native {
  font-family: 'ProximaNova-Regular' !important;
  color: rgba(157, 157, 157, 1);
}

.sidebar-price-column {
  width: 47%;
}

.sidebar-price-text-field .q-field__control {
  height: 38px;
  border-radius: 6px !important;
}

.sidebar-price-text-field .q-field__native {
  font-family: 'ProximaNova-Regular' !important;
}

.sidebar-go {
  border-radius: 6px;
  font-family: 'ProximaNova-Regular';
  width: 45px;
}

.sidebar-go:hover {
  background: #8cbaff !important;
}

.sidebar-go.disabled {
  background: #c0c0c0 !important;
}

.sidebar-apply {
  border-radius: 6px;
  font-family: 'ProximaNova-Regular';
  height: 34px;
}

.sidebar-apply:hover {
  background: #8cbaff !important;
}

.sidebar-apply.disabled {
  background: #c0c0c0 !important;
}

.sidebar-header-container {
  height: 50px;
}

.sidebar-sticky-container {
  width: 98px;
  height: 54px;
  border-radius: 12px;
  background: rgba(255, 255, 255, 1);
  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.15);
}

.sidebar-sticky-filter-icon {
  width: 38px;
  height: 38px;
  text-align: center;
  line-height: 1.8;
}

.main-filter-box {
  box-sizing: border-box;
  overflow-y: scroll;
  background: #ffffff;
  border-radius: 18px;
}

.main-filter-box::-webkit-scrollbar {
  display: none;
}
#filter_price .q-slider__thumb,
#filter_maturity .q-slider__thumb {
  box-shadow: inset 0px 0px 3px 0px rgb(0 0 0 / 20%);
  border-radius: 100px;
}

